data/derived/comb/progs/unify/prog5665.ml.out
Characters 71-72:
  | h::t -> h n + sumList t n;;
                          ^
Error: This expression has type ('a -> int) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> int) list
